--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Header starts here -->
     <header>
         <h1>Welcome to Café!</h1>
+        <a href="#Services">Our Services</a> <a href="#Table"> Items menu</a> <a href="#contact">Contact US</a>
     </header>
     <!-- Header ends here -->
     <!-- Main Starts here -->
