--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </p>
         </section>
         <hr>
-        <section id="Cafe Image">
+        <section id="Cafe-Image">
             <img src="https://www.avikalp.com/cdn/shop/products/MWZ3019_wallpaper1.jpg?v=1746038476" alt="Cafe image"
                 height="300px"></a>
         </section>
@@ -112,12 +112,12 @@
     <!-- Main ends here -->
     <!-- Footer starts here -->
     <footer>
+        <section id="contact">
         <h2>Contact US</h2>
         <p>Visit us at café, BTM layout Main Street, Bangalore.</p>
         <p>Email: contact@cafe.com | Phone: +91 8765432109</p>
-
+        </section>
     </footer>
     <!-- Footer ends here -->
 </body>
-
 </html>
