--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </main>
     <!-- Main ends here -->
     <!-- Footer starts here -->
-    <footer>
+    <footer id="contact">
         <section id="contact">
         <h2>Contact US</h2>
         <p>Visit us at café, BTM layout Main Street, Bangalore.</p>
